name:                 nephele
version:              0.0.1
license:              BSD3
license-File:         etc/LICENCE
author:               Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:           Tony Morris
copyright:            Copyright (C) 2013 Tony Morris
synopsis:             General purpose XML parser and library
category:             Text,XML
homepage:             https://github.com/tonymorris/xml
bug-reports:          https://github.com/tonymorris/xml/issues
cabal-version:        >= 1.10
build-type:           Custom
extra-source-files:   etc/CONTRIBUTORS,
                      etc/CREDITS
description:          General purpose XML parser and library with emphasis on correctness and utility (less so, performance)

source-repository     head
  type:               git
  location:           git@github.com:tonymorris/xml.git

flag                  small_base
  description:        Choose the new, split-up base package.

library
  default-language:
                      Haskell2010

  build-depends:
                      base < 5 && >= 3
                      , parsers >= 0.10.1
                      , lens >= 3.10
                      , text >= 0.11
                      , transformers >= 0.3
                      , parsec >= 3.1
                      , semigroups >= 0.11

  ghc-options:
                      -Wall

  default-extensions:
                      NoImplicitPrelude

  hs-source-dirs:
                      src

  exposed-modules:
                      Text.XML.Nephele
                      , Text.XML.Nephele.BaseCharacter
                      , Text.XML.Nephele.Character
                      , Text.XML.Nephele.CombiningCharacter
                      , Text.XML.Nephele.Comment
                      , Text.XML.Nephele.Digit
                      , Text.XML.Nephele.Extender
                      , Text.XML.Nephele.Ideographic
                      , Text.XML.Nephele.Letter
                      , Text.XML.Nephele.Name
                      , Text.XML.Nephele.NameCharacter
                      , Text.XML.Nephele.Whitespace

test-suite doctests
  type:
                      exitcode-stdio-1.0

  main-is:
                      doctests.hs

  default-language:
                      Haskell2010

  build-depends:
                      base < 5 && >= 3
                      , doctest >= 0.9.7
                      , filepath >= 1.3
                      , directory >= 1.1
                      , QuickCheck >= 2.0
                      , quickcheck-instances >= 0.3.3

  ghc-options:
                      -Wall
                      -threaded

  hs-source-dirs:
                      test
