name:                 nephele
version:              0.0.1
license:              BSD3
license-File:         LICENCE
author:               Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:           Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:            Copyright (c) 2018, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
synopsis:             General purpose XML parser and library
category:             Text,XML
homepage:             https://github.com/qfpl/nephele
bug-reports:          https://github.com/qfpl/nephele/issues
cabal-version:        >= 1.10
build-type:           Custom
extra-source-files:   etc/CONTRIBUTORS,
                      etc/CREDITS
description:          
  <<http://i.imgur.com/uZnp9ke.png>>
  .
  General purpose XML parser and library with emphasis on correctness and utility (less so, performance)

source-repository     head
  type:               git
  location:           git@github.com:qfpl/nephele.git

flag                  small_base
  description:        Choose the new, split-up base package.

library
  default-language:
                      Haskell2010

  build-depends:
                        base         >= 4.8   && < 5
                      , parsec           >= 3.1   && < 3.2
                      , parsers      >= 0.12  && < 0.13
                      , lens         >= 4.0   && < 5.0
                      , text         >= 1.2   && < 1.3
                      , transformers >= 0.5   && < 0.6
                      , papa         >= 0.3   && < 0.4
                      , semigroups   >= 0.18  && < 0.19

  ghc-options:
                      -Wall

  default-extensions:
                      NoImplicitPrelude

  hs-source-dirs:
                      src

  exposed-modules:
                      Text.XML.Nephele
                      , Text.XML.Nephele.BaseCharacter
                      , Text.XML.Nephele.Character
                      , Text.XML.Nephele.CombiningCharacter
                      , Text.XML.Nephele.Comment
                      , Text.XML.Nephele.Digit
                      , Text.XML.Nephele.EntityReference
                      , Text.XML.Nephele.Extender
                      , Text.XML.Nephele.Ideographic
                      , Text.XML.Nephele.Letter
                      , Text.XML.Nephele.Name
                      , Text.XML.Nephele.NameCharacter
                      , Text.XML.Nephele.Names
                      , Text.XML.Nephele.Nmtoken
                      , Text.XML.Nephele.Nmtokens
                      , Text.XML.Nephele.ParameterEntityReference
                      , Text.XML.Nephele.Whitespace

test-suite            tests

  build-depends:        QuickCheck       >= 2.9.2 && < 2.11
                      , base             >= 4.8   && < 5
                      , checkers         >= 0.4.6 && < 0.5
                      , hedgehog         >=0.5    && < 0.6
                      , lens             >= 4.15  && < 4.16
                      , nephele
                      , papa             >= 0.3   && < 0.4
                      , parsec           >= 3.1   && < 3.2
                      , parsers          >= 0.12  && < 0.13
                      , tasty            >= 0.11  && < 0.12
                      , tasty-hedgehog   >=0.1    && <0.3                      
                      , tasty-hunit      >= 0.9   && < 0.10
                      , tasty-quickcheck >= 0.8.4 && < 0.10
                      , text             >= 1.2   && < 1.3
                      
  type:             
                      exitcode-stdio-1.0

  main-is:          
                      Tests.hs

  hs-source-dirs:   
                      test

  default-language: 
                      Haskell2010

  ghc-options:       
                      -Wall

  default-extensions:
                      NoImplicitPrelude
